# miniEngine

./: CMakeLists.txt
include/: game.hpp  shader.hpp  sprite.hpp  texture.hpp
shader/: sprite.frag  sprite.geom  sprite.vert
src/: game.cpp  main.cpp  shader.cpp  sprite.cpp  texture.cpp
